Sun Jan  4 14:39:16 CET 2009 Guido Günther<agx@sigxcpu.org>

	add gtksecentry/secmem from gpg pinentry
	* Makefile.am (SUBDIRS): add gtksecentry
	* acinclude.m4: add GNUPG_CHECK_TYPEDEF, GNUPG_CHECK_MLOCK
	* gtksecentry/{Makefile.am,gtksecentry.c,gtksecentry.h}: new files
	* secmem/{Makfile.am,Manifest,memory.h,secmem{-util.h,.c},util.[ch]}:
	  new files
	* configure.ac: checks for secmem
	* src/Makefile.am (krb5_auth_dialog_LDADD): add libgtksecentry.a,
	  libsecmem.a

Sun Jan  4 14:28:06 CET 2009 Guido Günther <agx@sigxcpu.org>

	add a tray icon
	* configure.ac: check for libnotify, dbus, gconf
	* Makefile.am, icons/krb-{no-,}valid-ticket.png: add icons
	* src/krb5-auth-applet.[ch]: new files
	* src/krb5-auth-gconf.[ch]: new files
	* src/krb5-auth-notify.[ch]: new files
	* src/Makefile.am: expand krb5_auth_dialog_SOURCES and
	  krb5_auth_dialog_LDADD
	* README: document gconf keys

2008-09-26  Guido Guenther  <agx@sigxcpu.org>

	* src/krb5-auth-dialog.glade: remove width_request from
	krb5_auth_message_label. Now we display the whole principal name
	instead of cutting it off at an arbitrary position.

2008-09-26  Guido Guenther  <agx@sigxcpu.org>

	* src/krb5-auth-dialog.1.in: add manpage section

2008-09-26  Guido Guenther  <agx@agx@sigxcpu.org>

	* src/krb5-auth-dialog.desktop.in:
	remove duplicte exec form desktop file and fix comment

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534867: should use g_timeout_add_seconds

	* src/krb5-auth-dialog.c: Save power with
	g_timeout_add_seconds.
	Patch from from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534736: make i18n work

	* src/krb5-auth-dialog.c: Set up i18n correctly.
	* src/Makefile.am: Pass in LOCALEDIR.
	Patch from from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534620: password field focus

	* src/krb5-auth-dialog.c: Be sure we focus the
	password field every time.
	Patch from from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>