@@ -19,6 +19,8 @@ krb5_auth_dialog_SOURCES =	\
 	krb5-auth-gconf.h	\
 	krb5-auth-notify.c	\
 	krb5-auth-notify.h	\
+	krb5-auth-dbus.c	\
+	krb5-auth-dbus.h	\
 	dummy-strings.c
 
 krb5_auth_dialog_LDADD = \
