@@ -1,3 +1,10 @@
+Sun Jan  4 14:48:14 CET 2009 Guido Günther <agx@sigxcpu.org>
+
+	move dbus handling into a separate file
+	* src/krb5-auth-dbus.[ch]: new file
+	* src/krb5-auth-dialog.c: remove dbus related code
+	* src/Makefile.am (krb5_auth_dialog_SOURCES): add krb5-auth-dbus.[ch]
+
 Sun Jan  4 14:39:16 CET 2009 Guido Günther<agx@sigxcpu.org>
 
 	add gtksecentry/secmem from gpg pinentry
